// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<Fragment>
  <Tooltip
    containerElement="span"
    isVisible={false}
    maxWidth={360}
    place="top"
    testId="cf-ui-tooltip"
  >
    <IconButton
      buttonType="secondary"
      className="EditorToolbarButton"
      disabled={false}
      iconProps={
        Object {
          "icon": "HeadingOne",
        }
      }
      label="H1"
      testId="cf-ui-editor-toolbar-button"
      withDropdown={false}
    />
  </Tooltip>
</Fragment>
`;

exports[`renders the component as active 1`] = `
<Fragment>
  <Tooltip
    containerElement="span"
    content="H1"
    isVisible={false}
    maxWidth={360}
    place="top"
    testId="cf-ui-tooltip"
  >
    <IconButton
      buttonType="secondary"
      className="EditorToolbarButton EditorToolbarButton--is-active"
      disabled={false}
      iconProps={
        Object {
          "icon": "HeadingOne",
        }
      }
      label="H1"
      testId="cf-ui-editor-toolbar-button"
      withDropdown={false}
    />
  </Tooltip>
</Fragment>
`;

exports[`renders the component as disabled 1`] = `
<Fragment>
  <Tooltip
    containerElement="span"
    isVisible={false}
    maxWidth={360}
    place="top"
    testId="cf-ui-tooltip"
  >
    <IconButton
      buttonType="secondary"
      className="EditorToolbarButton"
      disabled={true}
      iconProps={
        Object {
          "icon": "HeadingOne",
        }
      }
      label="H1"
      onClick={[Function]}
      testId="cf-ui-editor-toolbar-button"
      withDropdown={false}
    />
  </Tooltip>
</Fragment>
`;

exports[`renders the component with a tooltip 1`] = `
<Fragment>
  <Tooltip
    containerElement="span"
    content="H1"
    isVisible={false}
    maxWidth={360}
    place="top"
    testId="cf-ui-tooltip"
  >
    <IconButton
      buttonType="secondary"
      className="EditorToolbarButton"
      disabled={false}
      iconProps={
        Object {
          "icon": "HeadingOne",
        }
      }
      label="H1"
      testId="cf-ui-editor-toolbar-button"
      withDropdown={false}
    />
  </Tooltip>
</Fragment>
`;

exports[`renders the component with an additional class name 1`] = `
<Fragment>
  <Tooltip
    containerElement="span"
    isVisible={false}
    maxWidth={360}
    place="top"
    testId="cf-ui-tooltip"
  >
    <IconButton
      buttonType="secondary"
      className="EditorToolbarButton my-extra-class"
      disabled={false}
      iconProps={
        Object {
          "icon": "HeadingOne",
        }
      }
      label="H1"
      testId="cf-ui-editor-toolbar-button"
      withDropdown={false}
    />
  </Tooltip>
</Fragment>
`;

exports[`renders with a dropdown indicator 1`] = `
<Fragment>
  <Tooltip
    containerElement="span"
    content="H1"
    isVisible={false}
    maxWidth={360}
    place="top"
    testId="cf-ui-tooltip"
  >
    <IconButton
      buttonType="secondary"
      className="EditorToolbarButton"
      disabled={false}
      iconProps={
        Object {
          "icon": "HeadingOne",
        }
      }
      label="H1"
      testId="cf-ui-editor-toolbar-button"
      withDropdown={true}
    />
  </Tooltip>
</Fragment>
`;
